rust/tests/snapshots/help/integrations__delete.snap
---
source: tests/cli/snapshots.rs
---
Delete an integration (soft delete)

Usage: vendo integrations delete [OPTIONS] <integrationId>

Arguments:
  <integrationId>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -y, --yes             Skip confirmation prompt
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo integrations delete <integrationId>
  $ vendo int delete <integrationId> --yes
  $ vendo integrations delete <integrationId> --dry-run
