rust/tests/snapshots/help/integrations__list.snap
---
source: tests/cli/snapshots.rs
---
List all integrations

Usage: vendo integrations list [OPTIONS]

Options:
      --profile <name>   Use a specific account profile
      --state <state>    Filter by state (active, inactive)
      --debug            Enable verbose request diagnostics
      --status <status>  Filter by status
      --type <type>      Filter by data type
      --limit <n>        Number of results [default: 20]
      --offset <n>       Pagination offset [default: 0]
      --json             Output raw JSON
      --output <field>   Print a single field per row (e.g. id)
  -h, --help             Print help

Examples:
  $ vendo integrations list
  $ vendo int list --state active
  $ vendo integrations list --output id
