rust/tests/snapshots/help/integrations__pause.snap
---
source: tests/cli/snapshots.rs
---
Pause an integration

Usage: vendo integrations pause [OPTIONS] <integrationId>

Arguments:
  <integrationId>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo integrations pause <integrationId>
  $ vendo int pause <integrationId> --dry-run
